# AutoLineDigitizer

./: .gitignore  .gitmodules  AutoLineDigitizer.spec  LICENSE  README.md  apply_marker_patch.py  batch_extract.py  desktop_app.py  kmds_v15.2.4_nullable.json  manifest.json  marker_extractor.py  pdf_figures.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  streamlit_app.py  vlm_screener.py
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml  test.yml
chartdete/: chartdete_infer.py
config/: chartdete_config.py
docs/: index.html  sitemap.xml
mineru_layout/: README.md  chart_detector.py  download_weights.py
src/: app.py  apply_pagerender_patch.py  chartdete_infer.py  color_line_extractor.py  evaluate.py  extract_paper.py  extraction_prompt.md  kmds_parallel.py  line_marker_detector.py  smart_axis_extractor.py  vlm_extract.py  vlm_extract_cli.py  vlm_verifier.py
src/mineru_layout/: __init__.py  pp_doclayoutv2.py
tests/: test_bbox_utils.py  test_marker_detection.py
