[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autolinedigitizer"
version = "0.1.0"
description = "Extract line/marker data from chart figures in papers and PDFs (VLM + LineFormer/ChartDete + MinerU layout)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Aditya Acharya", email = "aditya.acharya.bme23@itbhu.ac.in" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# NOTE: `torch`, `torchvision`, and `mmcv-full` are intentionally NOT listed here.
# They require a special install and would break `pip install .`:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
#   MMCV_WITH_OPS=1 pip install mmcv-full==1.7.2 --no-build-isolation
# See `.github/workflows/release.yml` for the canonical install sequence.
dependencies = [
    "flet==0.24.1",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow",
    "scipy>=1.9.0",
    "scikit-image>=0.21.0",
    "easyocr>=1.7.0",
    "bresenham",
    "terminaltables",
    "matplotlib",
    "pycocotools",
    "PyMuPDF",       # `fitz` — PDF figure extraction (pdf_figures, batch_extract)
    "anthropic",     # VLM extraction/verification (vlm_*, kmds_parallel, extract_paper)
]

[project.optional-dependencies]
# Tooling to reproduce the PyInstaller build locally. (torch/mmcv-full still
# need the special install documented above.)
build = ["pyinstaller", "setuptools<71", "wheel", "pyyaml", "addict", "yapf"]
dev = ["ruff", "pytest"]

[project.urls]
Homepage = "https://github.com/t29mato/AutoLineDigitizer"
Repository = "https://github.com/t29mato/AutoLineDigitizer"

# CLI entry points for the batch/headless tools. The Flet GUI (desktop_app)
# has no plain main(), so it's launched directly: `python src/desktop_app.py`.
[project.scripts]
ald-batch-extract = "batch_extract:main"
ald-evaluate = "evaluate:main"
ald-extract-paper = "extract_paper:main"
ald-vlm-extract = "vlm_extract:main"

[tool.setuptools]
# Flat module layout: every module lives directly under src/ and is imported by
# bare name (e.g. `from pdf_figures import ...`). package-dir maps the bare names
# to src/ so an install preserves those imports.
package-dir = { "" = "src" }
py-modules = [
    "app",
    "batch_extract",
    "chartdete_infer",
    "color_line_extractor",
    "desktop_app",
    "evaluate",
    "extract_paper",
    "kmds_parallel",
    "line_marker_detector",
    "marker_extractor",
    "pdf_figures",
    "smart_axis_extractor",
    "vlm_extract",
    "vlm_screener",
    "vlm_verifier",
]

# The mineru_layout package (the only dir with __init__.py) is discovered here.
[tool.setuptools.packages.find]
where = ["src"]

# Runtime data files (extraction_prompt.md, kmds_*.json, manifest.json) live
# top-level in src/ and are loaded relative to each module's __file__. They are
# NOT declared as package-data because, with this flat module layout, there is
# no package to attach them to — package-data only applies to packages. An
# editable install (`pip install -e .`) resolves them fine (modules import from
# src/ in place); the frozen app bundles them via AutoLineDigitizer.spec.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Catch real bugs now (syntax errors E9, undefined names / redefinitions /
# bad f-strings via F). The three cosmetic classes below are pre-existing
# tech debt across the codebase — ignored for now so CI stays green and
# meaningful; clean them up incrementally, then drop these ignores.
select = ["E9", "F"]
ignore = [
    "F401",  # unused imports
    "F541",  # f-string without placeholders
    "F841",  # unused local variables
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
